# daily-playlist

./: Cargo.toml  flake.nix  shell.nix
src/: error.rs  main.rs  playlist.rs  spotify.rs
