[package]
name = "daily-playlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["alloc"] }
rspotify = { version = "0.13.3", features = ["cli", "__sync", "client-ureq", "ureq-rustls-tls"], default-features = false }
